# sextant

./: .current_project  .gitignore  .mailmap  README.md  THESIS_REPRODUCTION.md  ablation_alignment.py  analyze_eliot_lawrence_alignment.py  anchor_case.py  author_lovelace_report.py  author_max_percentiles.py  authors.txt  begin.sh  build_manifest.py  carbon_run.py  check_documented_influence_cases_for_false_negatives.py  compare_influence_cases.py  comparison_report.txt  comparison_report_v2.txt  comprehensive_analysis.py  database_ops.py  diagnose.py  diagnostic_distributions.py  discriminant_analysis.py  do_svm.py  eltec_ground_truth_output.txt  export_for_analysis.py  extract_hapaxes.py  hapax_close_reading.txt  hapaxes_1tM.py  head_to_head_notes.py  load_alignments.py  load_authors_and_texts.py  load_authors_and_texts_500w.py  load_authors_and_texts_no_min.py  load_hapax_intersects.py  load_hapaxes.py  load_jaccard.py  load_relationships.py  logistic_regression.py  logistic_regression_shap_tt.py  (+20 more)
anchor_case_output/: anchor_case_results.txt
projects/eltec-100/exports/: EXPORT_SUMMARY.txt
projects/eltec-100/results/: eltec_rerun_20260222.txt  emissions_summary.md  influence_model_summary.txt  influence_model_summary_cv.txt  influence_model_summary_shap.txt  model_intercept.txt  paper_statistics.txt
projects/eltec-100/visualisations/: influence_network_top10pct.graphml  influence_network_top1pct.graphml
projects/shelley-lovelace/: sanity_check.py
projects/shelley-lovelace-final-500w/results/: influence_model_summary_cv.txt  model_intercept.txt  shelley_rerun_20260222.txt
validation_output/: validation_table.tex
visualisations/: export_graphml.py  influence_network_top5pct.graphml  visualize_influence_network.py
(+1928 files in other folders)
