[tool.poetry]
name = "thesis-code"
version = "0.1.0"
description = ""
authors = ["Tarah Wheeler <tarah@redqueentech.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thesis_code"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.2"
tqdm = "^4.65.0"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly-express = "^0.4.1"
nltk = "^3.9.0"
regex = "^2023.6.3"
dash = "^2.13.0"
tabulate = "^0.9.0"
scikit-learn = "^1.4.0"
jupyterlab = "^4.4.8"
networkx = "^3.3"
ipycytoscape = "^1.3.3"
ipywidgets = "^8.1.2"
jupyterlab-execute-time = "^3.1.2"
py4cytoscape = "^1.9.0"
imbalanced-learn = "^0.12.4"
ipykernel = "^6.29.5"
imblearn = "^0.0"
pysqlite3 = "^0.5.4"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnboundVariable = false
reportGeneralTypeIssues = false
