[tool.poetry]
name = "thesis-code"
version = "0.1.0"
description = ""
authors = ["Tarah Wheeler <tarah@redqueentech.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thesis_code"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.2"
tqdm = "^4.65.0"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly-express = "^0.4.1"
nltk = "^3.9.2"
regex = "^2023.6.3"
tabulate = "^0.9.0"
scikit-learn = "^1.4.0"
networkx = "^3.3"
imbalanced-learn = "^0.12.4"
shap = "^0.51.0"
codecarbon = "^3.2.6"
psutil = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnboundVariable = false
reportGeneralTypeIssues = false
